--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4-9 修改 title B</title>
+    <title>5-2 修改 Title A</title>
 </head>
 <body>
-    <h1>成員列表</h1>
-    <ul>
-        <li>成員一名稱：Dolce_墨</li>
-        <li>成員二名稱：B 4-3</li>
-        <li>成員三名稱：</li>
-    </ul>
 </body>
 </html>
